Refactoring + disable a huge part of code